--- a/index.html
+++ b/index.html
@@ -5,108 +5,261 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Đồ gỗ Mạnh Huệ</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; background: #111; color: #FFD700; }
-    header { background: #000; padding: 15px; text-align: center; }
-    header h1 { margin: 0; font-size: 1.8em; color: #FFD700; }
-    nav { background: #222; display: flex; justify-content: center; padding: 10px; flex-wrap: wrap; }
-    nav a { color: #FFD700; margin: 5px 15px; text-decoration: none; font-weight: bold; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #f5f5f5;
+    }
+    header {
+      background: #000;
+      color: #FFD700;
+      padding: 15px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    header h1 { margin: 0; }
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 10px;
+    }
+    nav a {
+      color: #FFD700;
+      text-decoration: none;
+      font-weight: bold;
+    }
     nav a:hover { text-decoration: underline; }
-    .banner { background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://via.placeholder.com/1200x400?text=Do+Go+Manh+Hue'); background-size: cover; background-position: center; text-align: center; color: #FFD700; padding: 60px 20px; }
-    .banner h2 { font-size: 2em; margin-bottom: 10px; }
-    .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 15px; padding: 20px; }
-    .product { background: #222; border: 1px solid #FFD700; border-radius: 10px; text-align: center; overflow: hidden; cursor: pointer; transition: transform 0.3s; }
-    .product:hover { transform: scale(1.03); }
-    .product img { width: 100%; height: auto; }
-    .product h3 { margin: 8px 0; font-size: 1em; }
-    footer { background: #000; color: #FFD700; text-align: center; padding: 15px; }
+
+    section {
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+    h2 {
+      text-align: center;
+      color: #FFD700;
+      margin-bottom: 20px;
+    }
+    .search-bar {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .search-bar input {
+      padding: 10px;
+      width: 80%;
+      max-width: 400px;
+      border: 2px solid #FFD700;
+      border-radius: 5px;
+      background: #000;
+      color: #FFD700;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .product {
+      background: #222;
+      border: 1px solid #FFD700;
+      border-radius: 10px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .product:hover { transform: scale(1.05); }
+    .product img { width: 100%; height: 200px; object-fit: cover; }
+    .product h3 { margin: 10px; color: #FFD700; }
+    .product p { margin: 0 10px 10px; font-size: 14px; }
+
     /* Modal */
-    .modal { display: none; position: fixed; z-index: 9999; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); overflow-y: auto; }
-    .modal-content { background: #222; margin: 50px auto; padding: 20px; border-radius: 10px; max-width: 600px; color: #FFD700; }
-    .modal-content h3 { margin-top: 0; }
-    .modal-content img { width: 100%; margin: 5px 0; border-radius: 8px; }
-    .close { float: right; font-size: 1.5em; cursor: pointer; color: #fff; }
-    @media (max-width: 600px) {
-      .banner h2 { font-size: 1.5em; }
-      nav { flex-direction: column; }
-      nav a { margin: 8px 0; }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 2000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      overflow: auto;
+    }
+    .modal-content {
+      background: #222;
+      margin: 5% auto;
+      padding: 20px;
+      border: 2px solid #FFD700;
+      border-radius: 10px;
+      max-width: 800px;
+      color: #fff;
+    }
+    .modal-content img { width: 100%; border-radius: 5px; margin-bottom: 10px; }
+    .close {
+      float: right;
+      font-size: 24px;
+      cursor: pointer;
+      color: #FFD700;
+    }
+
+    /* Contact buttons */
+    .contact-links {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+    .contact-links a {
+      background: #FFD700;
+      color: #000;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .contact-links a:hover {
+      background: #000;
+      color: #FFD700;
+      border: 1px solid #FFD700;
+    }
+
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 20px;
+      color: #FFD700;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Đồ gỗ Mạnh Huệ</h1>
+    <nav>
+      <a href="#home">Trang chủ</a>
+      <a href="#products">Sản phẩm</a>
+      <a href="#about">Về chúng tôi</a>
+      <a href="#policy">Chính sách ưu đãi</a>
+      <a href="#warranty">Bảo hành</a>
+      <a href="#contact">Liên hệ</a>
+    </nav>
   </header>
-  <nav>
-    <a href="#">Trang chủ</a>
-    <a href="#sanpham">Sản phẩm</a>
-    <a href="#lienhe">Liên hệ</a>
-  </nav>
-  <section class="banner">
-    <h2>Sang trọng - Chuyên nghiệp - Đẳng cấp</h2>
-    <p>Chuyên cung cấp đồ gỗ nội thất cao cấp</p>
+
+  <section id="home">
+    <h2>Chào mừng đến với Đồ gỗ Mạnh Huệ</h2>
+    <p style="text-align:center;">Chúng tôi chuyên cung cấp các sản phẩm đồ gỗ nội thất sang trọng, bền đẹp, thể hiện phong cách sống đẳng cấp.</p>
   </section>
-  <section id="sanpham" class="products">
-    <!-- 20 sản phẩm -->
-    <script>
-      const products = [];
-      for (let i = 1; i <= 20; i++) {
-        products.push({
-          id: i,
-          name: "Sản phẩm " + i,
-          desc: "Mẫu sản phẩm " + i + " thiết kế sang trọng, chất liệu gỗ cao cấp, bền đẹp theo thời gian.",
-          images: [
-            "https://via.placeholder.com/600x400?text=SP" + i + "-1",
-            "https://via.placeholder.com/600x400?text=SP" + i + "-2",
-            "https://via.placeholder.com/600x400?text=SP" + i + "-3",
-            "https://via.placeholder.com/600x400?text=SP" + i + "-4"
-          ]
-        });
-      }
-      document.write(products.map(p => `
-        <div class="product" onclick="openModal(${p.id})">
-          <img src="${p.images[0]}" alt="${p.name}">
-          <h3>${p.name}</h3>
-        </div>
-      `).join(""));
-    </script>
+
+  <section id="products">
+    <h2>Sản phẩm</h2>
+    <div class="search-bar">
+      <input type="text" id="searchInput" placeholder="Tìm kiếm sản phẩm...">
+    </div>
+    <div class="products" id="productList">
+      <!-- JS sẽ thêm sản phẩm ở đây -->
+    </div>
   </section>
-  <section id="lienhe" style="padding:20px; text-align:center;">
+
+  <section id="about">
+    <h2>Về chúng tôi</h2>
+    <p>Đồ gỗ Mạnh Huệ tự hào là đơn vị sản xuất và cung cấp đồ gỗ nội thất cao cấp, kết hợp tinh hoa thủ công truyền thống với phong cách hiện đại.</p>
+  </section>
+
+  <section id="policy">
+    <h2>Chính sách ưu đãi</h2>
+    <p>Khách hàng thân thiết được giảm giá từ 5% - 15%. Miễn phí vận chuyển nội thành cho đơn hàng trên 5 triệu.</p>
+  </section>
+
+  <section id="warranty">
+    <h2>Chính sách bảo hành</h2>
+    <p>Tất cả sản phẩm được bảo hành 24 tháng. Chúng tôi cam kết sửa chữa hoặc thay thế sản phẩm nếu có lỗi từ nhà sản xuất.</p>
+  </section>
+
+  <section id="contact">
     <h2>Liên hệ</h2>
-    <p>Hotline: 0123 456 789</p>
-    <p>Zalo: DoGoManhHue | Facebook: fb.com/dogomanhhue</p>
-    <p>
-      <a href="https://forms.gle/your-form-id" target="_blank" style="color:#FFD700; font-weight:bold;">Điền Form Liên hệ</a>
-    </p>
+    <p>Địa chỉ: 123 Đường ABC, Hà Nội</p>
+    <p><a href="https://www.google.com/maps/place/Hanoi" target="_blank" style="color:#FFD700;">Xem trên Google Maps</a></p>
+    <div class="contact-links">
+      <a href="https://zalo.me/0123456789" target="_blank">Zalo</a>
+      <a href="tel:0123456789">Gọi ngay</a>
+      <a href="https://m.me/yourfacebookid" target="_blank">Messenger</a>
+    </div>
   </section>
+
   <footer>
     <p>&copy; 2025 Đồ gỗ Mạnh Huệ. All rights reserved.</p>
   </footer>
 
-  <!-- Modal sản phẩm -->
+  <!-- Modal -->
   <div id="productModal" class="modal">
     <div class="modal-content">
-      <span class="close" onclick="closeModal()">&times;</span>
-      <h3 id="modalTitle"></h3>
-      <p id="modalDesc"></p>
+      <span class="close">&times;</span>
+      <h2 id="modalTitle"></h2>
       <div id="modalImages"></div>
+      <p id="modalDescription"></p>
     </div>
   </div>
 
   <script>
-    function openModal(id) {
-      const product = products.find(p => p.id === id);
-      document.getElementById("modalTitle").innerText = product.name;
-      document.getElementById("modalDesc").innerText = product.desc;
-      document.getElementById("modalImages").innerHTML = product.images.map(img => `<img src="${img}">`).join("");
-      document.getElementById("productModal").style.display = "block";
+    const products = [];
+    for (let i = 1; i <= 20; i++) {
+      products.push({
+        name: "Sản phẩm " + i,
+        description: "Mô tả chi tiết về sản phẩm " + i + ". Chất liệu gỗ tự nhiên, bền đẹp, thiết kế sang trọng.",
+        images: [
+          `https://picsum.photos/seed/${i}a/400/300`,
+          `https://picsum.photos/seed/${i}b/400/300`,
+          `https://picsum.photos/seed/${i}c/400/300`,
+          `https://picsum.photos/seed/${i}d/400/300`
+        ]
+      });
     }
-    function closeModal() {
-      document.getElementById("productModal").style.display = "none";
+
+    const productList = document.getElementById("productList");
+    const modal = document.getElementById("productModal");
+    const modalTitle = document.getElementById("modalTitle");
+    const modalImages = document.getElementById("modalImages");
+    const modalDescription = document.getElementById("modalDescription");
+    const closeModal = document.querySelector(".close");
+
+    function renderProducts(items) {
+      productList.innerHTML = "";
+      items.forEach((p, index) => {
+        const div = document.createElement("div");
+        div.className = "product";
+        div.innerHTML = `
+          <img src="${p.images[0]}" alt="${p.name}">
+          <h3>${p.name}</h3>
+          <p>${p.description.substring(0, 50)}...</p>
+        `;
+        div.onclick = () => openModal(p);
+        productList.appendChild(div);
+      });
     }
-    window.onclick = function(event) {
-      const modal = document.getElementById("productModal");
-      if (event.target === modal) { closeModal(); }
+
+    function openModal(product) {
+      modalTitle.textContent = product.name;
+      modalDescription.textContent = product.description;
+      modalImages.innerHTML = "";
+      product.images.forEach(img => {
+        const image = document.createElement("img");
+        image.src = img;
+        modalImages.appendChild(image);
+      });
+      modal.style.display = "block";
     }
+
+    closeModal.onclick = () => modal.style.display = "none";
+    window.onclick = (e) => { if (e.target == modal) modal.style.display = "none"; };
+
+    document.getElementById("searchInput").addEventListener("input", (e) => {
+      const keyword = e.target.value.toLowerCase();
+      const filtered = products.filter(p => p.name.toLowerCase().includes(keyword));
+      renderProducts(filtered);
+    });
+
+    renderProducts(products);
   </script>
 </body>
 </html>
